2011-07-29  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/49897
	PR middle-end/49898
	* omp-low.c (use_pointer_for_field): If disallowing copy-in/out
	in nested parallel and outer is a gimple_reg, mark it as addressable
	and set its bit in task_shared_vars bitmap too.

2011-07-29  Wei Guozhi  <carrot@google.com>

	Backport from mainline
	2011-07-29  Wei Guozhi  <carrot@google.com>

	PR rtl-optimization/49799
	* combine.c (make_compound_operation): Check if the bit field is valid
	before change it to bit field extraction.

2011-07-28  Jakub Jelinek  <jakub@redhat.com>

	PR debug/49871
	* dwarf2out.c (size_of_die, value_format, output_die): Use
	DW_FORM_udata instead of DW_FORM_data[48] for
	dw_val_class_unsigned_const DW_AT_data_member_location for DWARF 3.

2011-07-28  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2011-07-28  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/47364
	* config/i386/i386.md (strlen<mode>): Replace SWI48x with P.

2011-07-28  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	Backport from mainline:
	2011-07-26  Martin Jambor  <mjambor@suse.cz>

	* tree-sra.c (tree_non_mode_aligned_mem_p): Strip conversions and
	return false for invariants.

2011-07-27  Jakub Jelinek  <jakub@redhat.com>

	PR target/49866
	* config/i386/i386.md (*call_pop_1_vzeroupper, *call_pop_1,
	*sibcall_pop_1_vzeroupper, *sibcall_pop_1, *call_1_vzeroupper,
	*call_1, *sibcall_1_vzeroupper, *sibcall_1, *call_1_rex64_vzeroupper,
	*call_1_rex64, *call_1_rex64_ms_sysv_vzeroupper,
	*call_1_rex64_ms_sysv, *sibcall_1_rex64_vzeroupper,
	*sibcall_1_rex64, *call_value_pop_1_vzeroupper,
	*call_value_pop_1, *sibcall_value_pop_1_vzeroupper,
	*sibcall_value_pop_1, *call_value_1_vzeroupper,
	*call_value_1, *sibcall_value_1_vzeroupper,
	*sibcall_value_1, *call_value_1_rex64_vzeroupper,
	*call_value_1_rex64, *call_value_1_rex64_ms_sysv_vzeroupper,
	*call_value_1_rex64_ms_sysv, *sibcall_value_1_rex64_vzeroupper,
	*sibcall_value_1_rex64): Use z constraint instead of s constraint.
